--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 
     // Define a model for linear regression.
     var model;
-    (async () => { model = await tf.loadModel("http://localhost:4200/assets/trained_models/mobilenet/model.json"); })();
+    (async () => { model = await tf.loadModel("/assets/trained_models/mobilenet/model.json"); })();
   </script>
 </head>
 
